CRUD - Update + Delete Task Entity
1. Add update and delete methode in TaskController
2. Add Materilize form theme
3. Create a custom request in TaskRepository to limit number request

--- a/app/Resources/views/task/edit.html.twig
+++ b/app/Resources/views/task/edit.html.twig
@@ -46,6 +46,11 @@
             {{ form_errors(edit_form.picture.alt) }}
         </div>
 
+        <div>
+            <p>Image initial</p>
+            <img width="100" src="{{ asset('uploads/' ~ task.picture.name) }}" alt="aaa">
+        </div>
+    
         <input type="submit" value="Edit" />
     {{ form_end(edit_form) }}
 
