--- a/app/Resources/views/veille/index.html.twig
+++ b/app/Resources/views/veille/index.html.twig
@@ -9,6 +9,7 @@
         </ul>
         <ul>
             <li><a href="{{ path('veille_show', {'id' : veille.id}) }}">Voir plus</a></li>
+            <li><a href="{{ path('veille_edit', {'id' : veille.id}) }}">edit</a></li>
         </ul>
     {% endfor %}
 {% endblock %}
