--- a/app/Resources/views/task/index.html.twig
+++ b/app/Resources/views/task/index.html.twig
@@ -28,7 +28,11 @@
                 <td>{% if task.dateEnd %}{{ task.dateEnd|date('Y-m-d H:i:s') }}{% endif %}</td>
                 <td>{{ task.category.name }}</td>
                 <td>
-                    <img width="100" src="{{ asset('uploads/' ~ task.picture.name) }}" alt="{{ task.picture.alt }}">
+                    {% if task.picture is not null %}
+                        <img width="100" src="{{ asset('uploads/' ~ task.picture.name) }}" alt="{{ task.picture.alt }}">
+                    {% else %}
+                        <p>Pas d'image</p>
+                    {% endif %}
                 </td>
                 <td>
                     <ul>
