Mise en place ajax autocomplete + send form
1. Mise en place des requetes dans web/assets/js/main.js
2. Mise en place des méthodes dans DeafultController, indexAction
3. Ajout de style pour l'autocomplete dans web/assets/css/style.css
4. Création d'un template à injecter dans le dom en fonction de la
recherche (Ressources/views/default/task_result_search.html.twig)

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -2,5 +2,30 @@
 
 {% block body %}
     <h1>Welcome</h1>
-    {{ form(form) }}
+
+    <div class="row">
+        <h1>Formulaire</h1>
+        {{ form_start(form) }}
+
+        <div>
+            {{ form_label(form.search) }}
+            {{ form_widget(form.search) }}
+            <ul id="result_autocomplete"></ul>
+            {{ form_errors(form.search) }}
+        </div>
+
+        <div>
+            {{ form_widget(form.submit) }}
+        </div>
+
+        {{ form_end(form) }}
+    </div>
+
+    <div class="row">
+        <h1>Resultat</h1>
+        <div id="search_result">
+
+        </div>
+    </div>
+
 {% endblock %}
