--- a/app/Resources/views/veille/new.html.twig
+++ b/app/Resources/views/veille/new.html.twig
@@ -20,6 +20,10 @@
         {{ form_widget(form.description) }}
         {{ form_errors(form.description) }}
     </div>
+    <div class="row">
+        {{ form_widget(form.pictures.file) }}
+        {{ form_errors(form.pictures.file) }}
+    </div>
 
     <input type="submit" value="Create" />
 
